--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
             android:name=".InscriptionActivity"
             android:exported="true"
             android:label="@string/title_activity_inscription"
-            android:theme="@style/Theme.JCCL_Network_Project.NoActionBar" />
-        <activity android:name=".MainActivity" >
+            android:theme="@style/Theme.JCCL_Network_Project" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
