renvois des modification liees a la page edit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,19 @@
         android:theme="@style/Theme.JCCL_Network_Project">
         <activity
             android:name=".EditActivity"
-            android:exported="true" />
-        <activity
-            android:name=".InscriptionActivity"
-            android:exported="true"
-            android:label="@string/title_activity_inscription"
-            android:theme="@style/Theme.JCCL_Network_Project" >
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".InscriptionActivity"
+            android:exported="true"
+            android:label="@string/title_activity_inscription"
+            android:theme="@style/Theme.JCCL_Network_Project" >
+
         </activity>
         <activity android:name=".MainActivity">
 
