--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JCCL_Network_Project" >
         <activity
-            android:name=".InscriptionActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/title_activity_inscription"
             android:theme="@style/Theme.JCCL_Network_Project" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".InscriptionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
