--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JCCL_Network_Project">
         <activity
+            android:name=".detail_pages.DetailPublication_doc"
+            android:exported="true" />
+        <activity
             android:name=".EditActivity"
-            android:exported="true" >
+            android:exported="true"></activity>
+        <activity
+            android:name=".InscriptionActivity"
+            android:exported="true"
+            android:label="@string/title_activity_inscription"
+            android:theme="@style/Theme.JCCL_Network_Project"></activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".InscriptionActivity"
-            android:exported="true"
-            android:label="@string/title_activity_inscription"
-            android:theme="@style/Theme.JCCL_Network_Project" >
-
-        </activity>
-        <activity android:name=".MainActivity">
-
         </activity>
     </application>
 
