--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,38 +8,35 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:theme="@style/Theme.JCCL_Network_Project" >
-
-        <activity android:name=".MainActivity" >
+        android:theme="@style/Theme.JCCL_Network_Project">
+        <activity
+            android:name=".OTPActivity"
+            android:exported="true" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name=".EditActivity"
             android:exported="true" />
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
 
         <activity
             android:name=".InscriptionActivity"
             android:exported="true"
             android:label="@string/title_activity_inscription"
-
-            android:theme="@style/Theme.JCCL_Network_Project" >
-        </activity>
-
-
+            android:theme="@style/Theme.JCCL_Network_Project" />
     </application>
 
 </manifest>
