--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JCCL_Network_Project">
-        <activity android:name=".viewholders.Apercu_Profil_Activity"></activity>
-        <activity android:name=".ViewOtherProfile" />
+
+
         <activity android:name=".OTPActivity" />
         <activity android:name=".LoginActivity" />
         <activity
@@ -18,6 +18,9 @@
             android:exported="true" />
         <activity
             android:name=".EditActivity"
+            android:exported="true" />
+        <activity
+            android:name=".InscriptionActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
