--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.jccl_network_project" >
+    package="com.example.jccl_network_project">
 
     <application
         android:allowBackup="true"
@@ -8,13 +8,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JCCL_Network_Project" >
+        android:theme="@style/Theme.JCCL_Network_Project">
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:label="@string/title_activity_product"
+            android:theme="@style/Theme.JCCL_Network_Project.NoActionBar" />
+        <activity
+            android:name=".InscriptionActivity"
+            android:exported="true"
             android:label="@string/title_activity_inscription"
             android:theme="@style/Theme.JCCL_Network_Project" />
-        <activity android:name=".InscriptionActivity">
+        <activity android:name=".detail_pages.ProductActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
