--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,8 @@ dependencies {
     //TimeLine Vipulsri
     implementation 'com.github.vipulasri:timelineview:1.1.5'
 
+    //pdf viewer : Dependance pour implemneter la lecture des pdf
+    // sur notre application directement
+    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
+
 }
