--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
             android:label="@string/title_activity_product"
             android:theme="@style/Theme.JCCL_Network_Project.NoActionBar" />
         <activity
-            android:name=".InscriptionActivity"
+            android:name=".detail_pages.ProductActivity"
             android:exported="true"
             android:label="@string/title_activity_inscription"
             android:theme="@style/Theme.JCCL_Network_Project" />
-        <activity android:name=".detail_pages.ProductActivity">
+        <activity android:name=".InscriptionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
