reception des update de christian

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,12 @@
         <activity
             android:name=".detail_pages.DetailPublication_doc"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".EditActivity"
@@ -30,7 +30,8 @@
             android:name=".InscriptionActivity"
             android:exported="true"
             android:label="@string/title_activity_inscription"
-            android:theme="@style/Theme.JCCL_Network_Project" />
+            android:theme="@style/Theme.JCCL_Network_Project">
+        </activity>
         <activity android:name=".MainActivity"></activity>
     </application>
 
