--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,8 @@
             android:name=".PdfViewer"
             android:exported="true" />
         <activity
-
-            android:name=".detail_pages.ProductActivity"
-            android:exported="true"
-            android:label="@string/title_activity_inscription"
-            android:theme="@style/Theme.JCCL_Network_Project" />
-        <activity android:name=".InscriptionActivity">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:name=".detail_pages.DetailPublication_doc"
+            android:exported="true">
 
         </activity>
         <activity
@@ -37,7 +27,13 @@
             android:label="@string/title_activity_inscription"
             android:theme="@style/Theme.JCCL_Network_Project">
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
