--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JCCL_Network_Project">
         <activity
-            android:name=".MainActivity"
+            android:name=".detail_pages.PaidActivity"
+            android:exported="true" />
+        <activity
+            android:name=".InscriptionActivity"
             android:exported="true"
             android:label="@string/title_activity_product"
             android:theme="@style/Theme.JCCL_Network_Project.NoActionBar" />
         <activity
-            android:name=".detail_pages.ProductActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/title_activity_inscription"
             android:theme="@style/Theme.JCCL_Network_Project" />
-        <activity android:name=".InscriptionActivity">
+        <activity android:name=".detail_pages.ProductActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
