--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JCCL_Network_Project">
-
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
         <activity
             android:name=".detail_pages.PaidActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".detail_pages.ProductActivity"
             android:exported="true"
             android:label="@string/title_activity_product"
             android:theme="@style/Theme.JCCL_Network_Project.NoActionBar" />
@@ -23,9 +25,7 @@
             android:exported="true" />
         <activity
             android:name=".detail_pages.DetailPublication_doc"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".EditActivity"
             android:exported="true" />
@@ -33,9 +33,8 @@
             android:name=".InscriptionActivity"
             android:exported="true"
             android:label="@string/title_activity_inscription"
-            android:theme="@style/Theme.JCCL_Network_Project">
-        </activity>
-        <activity android:name=".detail_pages.ProductActivity">
+            android:theme="@style/Theme.JCCL_Network_Project"></activity>
+        <activity android:name=".detail_pages.ForumActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
