--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,44 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jccl_network_project">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
->
-        <activity android:name=".OTPActivity"></activity>
-        <activity android:name=".LoginActivity" >
+        android:theme="@style/Theme.JCCL_Network_Project.NoActionBar">
+        <activity android:name=".CreatePublicationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
-
+        <activity android:name=".ViewOtherProfileActivity" />
+        <activity android:name=".OTPActivity" />
+        <activity android:name=".LoginActivity" />
         <activity
             android:name=".EditActivity"
-            android:exported="true" />
+            android:exported="true" >
 
+        </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/title_activity_product"
-            android:theme="@style/Theme.JCCL_Network_Project.NoActionBar" />
+            android:exported="true" />
         <activity
             android:name=".detail_pages.ProductActivity"
-            android:exported="true"
-            android:label="@string/title_activity_inscription" />
+            android:exported="true" />
         <activity android:name=".InscriptionActivity">
 
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-
-
-
+        </activity>
     </application>
 
 </manifest>
