--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JCCL_Network_Project">
-        <activity android:name=".ViewProfileActivity"></activity>
+        <activity
+            android:name=".ClasseVirtuelleActivity"
+            android:exported="true" />
+        <activity android:name=".ViewProfileActivity" />
         <activity android:name=".OthersProfileActivvity" />
         <activity android:name=".OTPActivity" />
         <activity android:name=".LoginActivity" />
