--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.jccl_network_project">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-
         android:theme="@style/Theme.JCCL_Network_Project.NoActionBar">
-        <activity android:name=".CreatePublicationActivity">
-
-        </activity>
+        <activity
+            android:name=".CreateFillDiscussion"
+            android:exported="true" />
+        <activity
+            android:name=".VirtualClass.IntroVitualClassActivity"
+            android:exported="true" />
+        <activity
+            android:name=".detail_pages.DetailPublication_doc"
+            android:exported="true" />
+        <activity android:name=".CreatePublicationActivity" />
         <activity android:name=".ViewOtherProfileActivity" />
         <activity
             android:name=".detail_pages.PaidActivity"
@@ -27,16 +29,13 @@
             android:name=".Home_fragment"
             android:exported="true"
             tools:ignore="Instantiatable" />
-
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity"></activity>
         <activity
             android:name=".EditActivity"
-            android:exported="true" >
-        </activity>
-
+            android:exported="true" />
         <activity
             android:name=".detail_pages.ProductActivity"
-            android:exported="true" />
+            android:exported="true"></activity>
         <activity android:name=".InscriptionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,25 +43,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".PdfViewer"
             android:exported="true" />
+        <activity android:name=".detail_pages.ForumActivity"></activity>
+        <activity
+            android:name=".detail_pages.TestGeneralAdapter"
+            android:exported="true" />
+    </application>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-        <activity android:name=".detail_pages.ForumActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".detail_pages.TestGeneralAdapter"
-            android:exported="true">
-    </activity>
-
-
-</application>
+    <uses-permission android:name="android.permission.CAMERA" />
 
 </manifest>
-
-
