Realisation de l'interface notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:name=".ClasseVirtuelleActivity"
             android:exported="true" />
         <activity android:name=".ViewProfileActivity" />
-        <activity android:name=".OthersProfileActivvity" />
+<!--        <activity android:name=".OthersProfileActivvity" />-->
         <activity android:name=".OTPActivity" />
         <activity android:name=".LoginActivity" />
         <activity
